2.0.1.4 update
-Easier Item config options.
-Block Break speed is now disabled for owned blocks.
-Loot is now more easily configurable.
-New /lcadmin giveBankAccountsMoney sub-command.